; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_getnetpath.c_setnetpath.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_getnetpath.c_setnetpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netpath_vars = type { i32*, i32*, i32*, i32*, i32 }

@NP_VALID = common dso_local global i32 0, align 4
@NETPATH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @setnetpath() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.netpath_vars*, align 8
  %3 = alloca i8*, align 8
  %4 = call i32* @malloc(i32 40)
  %5 = bitcast i32* %4 to %struct.netpath_vars*
  store %struct.netpath_vars* %5, %struct.netpath_vars** %2, align 8
  %6 = icmp eq %struct.netpath_vars* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i8* null, i8** %1, align 8
  br label %58

8:                                                ; preds = %0
  %9 = call i32* (...) @setnetconfig()
  %10 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %11 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %10, i32 0, i32 2
  store i32* %9, i32** %11, align 8
  %12 = icmp eq i32* %9, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %8
  store i8* null, i8** %1, align 8
  br label %58

14:                                               ; preds = %8
  %15 = load i32, i32* @NP_VALID, align 4
  %16 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %17 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %16, i32 0, i32 4
  store i32 %15, i32* %17, align 8
  %18 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %19 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %18, i32 0, i32 3
  store i32* null, i32** %19, align 8
  %20 = load i32, i32* @NETPATH, align 4
  %21 = call i8* @getenv(i32 %20)
  store i8* %21, i8** %3, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %14
  %24 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %25 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  br label %50

26:                                               ; preds = %14
  %27 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %28 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %27, i32 0, i32 2
  %29 = load i32*, i32** %28, align 8
  %30 = call i32 @endnetconfig(i32* %29)
  %31 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %32 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %31, i32 0, i32 2
  store i32* null, i32** %32, align 8
  %33 = load i8*, i8** %3, align 8
  %34 = call i32 @strlen(i8* %33)
  %35 = add nsw i32 %34, 1
  %36 = call i32* @malloc(i32 %35)
  %37 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %38 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %37, i32 0, i32 0
  store i32* %36, i32** %38, align 8
  %39 = icmp eq i32* %36, null
  br i1 %39, label %40, label %43

40:                                               ; preds = %26
  %41 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %42 = call i32 @free(%struct.netpath_vars* %41)
  store i8* null, i8** %1, align 8
  br label %58

43:                                               ; preds = %26
  %44 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %45 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = load i8*, i8** %3, align 8
  %48 = call i32 @strcpy(i32* %46, i8* %47)
  br label %49

49:                                               ; preds = %43
  br label %50

50:                                               ; preds = %49, %23
  %51 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %52 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %51, i32 0, i32 0
  %53 = load i32*, i32** %52, align 8
  %54 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %55 = getelementptr inbounds %struct.netpath_vars, %struct.netpath_vars* %54, i32 0, i32 1
  store i32* %53, i32** %55, align 8
  %56 = load %struct.netpath_vars*, %struct.netpath_vars** %2, align 8
  %57 = bitcast %struct.netpath_vars* %56 to i8*
  store i8* %57, i8** %1, align 8
  br label %58

58:                                               ; preds = %50, %40, %13, %7
  %59 = load i8*, i8** %1, align 8
  ret i8* %59
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32* @setnetconfig(...) #1

declare dso_local i8* @getenv(i32) #1

declare dso_local i32 @endnetconfig(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @free(%struct.netpath_vars*) #1

declare dso_local i32 @strcpy(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
